--- a/sun-sensor-simulator/CMakeLists.txt
+++ b/sun-sensor-simulator/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(sun-sensor-simulator CXX)
+project(sun-sensor CXX)
 add_compile_options(-Wall)
 set(CMAKE_CXX_STANDARD 11)
 
